--- a/Aufgabe1/gta_v1/public/stylesheets/style.css
+++ b/Aufgabe1/gta_v1/public/stylesheets/style.css
@@ -265,4 +265,27 @@ h2 {
   .row {
     flex-direction: column;
   }
+  .header__image{
+    display: none;
+  }
+  .col-4{
+    width: calc(83.33% - 1rem);
+  }
+  .col-5{
+    width: calc(83.33% - 1rem);
+  }
+  .col-3{
+    width: calc(83.33% - 1rem);
+  }
+}
+@media (max-width: 800px) and (min-width: 600px) {
+  .col-4{
+    width: calc(40.33% - 1rem);
+  }
+  .col-5{
+    width: calc(83.33% - 1rem);
+  }
+  .col-3{
+    width: calc(50.33% - 1rem);
+  }
 }
