Das Logo bei 300px oder weniger auch ausgeblendet

--- a/Aufgabe1/gta_v1/public/stylesheets/style.css
+++ b/Aufgabe1/gta_v1/public/stylesheets/style.css
@@ -252,7 +252,9 @@ h2 {
 
 /* ... Beispiel???? Flo hat das getestet xD entfern es wenns nervt xD ... */
 @media (max-width: 300px) {
-
+  .header__image{
+    display: none;
+  }
   .row {
     flex-direction: column;
   }
