--- a/Aufgabe1/gta_v1/public/stylesheets/style.css
+++ b/Aufgabe1/gta_v1/public/stylesheets/style.css
@@ -165,7 +165,7 @@ h2 {
 
 /* ... your code here ... */
 .header__image {
-  width: 50px;
+  width: 10%;
 }
 
 .header {
@@ -181,6 +181,10 @@ h2 {
 /* ### TODO ### Styles for Main Component */
 
 /* ... your code here ... */
+
+main {
+  height: 100%;
+}
 
 /* ### TODO ### Styles for Tagging component */
 
@@ -239,8 +243,9 @@ h2 {
 /* ... your code here ... */
 .footer {
   padding: 3%;
-  margin: 2rem 0 0 0;
+  margin-top: auto;
   background-color: lightgray ;
+  bottom: 0;
 }
 
 /* ### TODO ### Media Queries */
