--- a/Aufgabe1/gta_v1/public/stylesheets/style.css
+++ b/Aufgabe1/gta_v1/public/stylesheets/style.css
@@ -242,7 +242,7 @@ main {
 
 /* ... your code here ... */
 .footer {
-  padding: 3%;
+  padding: 1.5rem;
   margin-top: auto;
   background-color: lightgray ;
   bottom: 0;
