--- a/Aufgabe3/gta_v3/views/index.ejs
+++ b/Aufgabe3/gta_v3/views/index.ejs
@@ -1,5 +1,120 @@
 <!-- TODO: HTML AUS AUFGABE2 HIERHER KOPIEREN UND DIE BEISPIEL-EINTRÄGE DER DISCOVERY-LISTE MIT DEN FOLGENDEN ZEILEN ERSETZEN -->
+<!DOCTYPE html>
 
-<% if (taglist !== undefined) taglist.forEach(function(gtag) { %>
-    <li><%= gtag.name %> ( <%= gtag.latitude %>,<%= gtag.longitude %>) <%= gtag.hashtag %> </li>
-<% }); %>
+<!-- File origin: VS1LAB A1a -->
+
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>GeoTagApp</title>
+    <link type="text/css" rel="stylesheet" href="../public/stylesheets/style.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+</head>
+
+<body>
+<header class="header">
+    <img src="./public/images/location.png" class="header__image" alt="an image of a map and location">
+    <h1 class="header__title">GeoTagApp</h1>
+    <nav class="header__navigation">
+        <a href="#">About</a> | <a href="#">Help</a> | <a href="/">Home</a>
+    </nav>
+</header>
+
+<main class="main">
+    <div class = "row">
+        <div class  = "col-4 tagging__layout">
+            <section class="main__tagging tagging">
+                <h2>Tagging</h2>
+
+                <!-- ############### VS1Lab 1a Form 1 Start -->
+                <form id="tag-form" action="/tagging" method="post">
+                    <!-- ... your code here ... -->
+                    <fieldset id ="tag_fieldset">
+                        <legend>Add a new GeoTag</legend>
+
+                        <label for="lat">Latitude</label>
+                        <input type="text" name="latitude_field_name" id="lat" readonly/>
+
+                        <label for="long">Longitude:</label>
+                        <input type="text" name="longitude_field_name" id="long" readonly/>
+
+                        <label for="name">Name:</label>
+                        <input type="text" name="name_field_name" id="name" placeholder="e.g. Central Berlin" maxlength=10 required/>
+
+                        <label for="hash">Hashtag: </label>
+                        <input type="text" name="hashtag_field_name" id="hash" placeholder="e.g. #ber" pattern="#[A-Za-z]{1,10}"/>
+
+                        <div class="button-field">
+                            <input type="button" value="Refresh" onclick="updateLocation()">
+                            <input type="submit" value="Add Tag"/>
+                        </div>
+
+                    </fieldset>
+
+                </form>
+                <!-- ############### VS1Lab 1a Form 1 End -->
+            </section>
+        </div>
+        <div class="col-8 discovery__layout">
+            <section class="main__discovery discovery">
+                <h2 class="discovery__title">Discovery</h2>
+
+                <!-- ############### VS1Lab 1a Form 2 Start -->
+                <form class="discovery__search" id="discoveryFilterForm" action="/discovery" method="post">
+
+                    <!-- ... your code here ... -->
+                    <fieldset id="disc_fieldset">
+                        <legend>Search</legend>
+                        <div class="row">
+                            <div class="col-4">
+                                <label for="disc">Search term or keywords:</label>
+                                <input type="text" name="discovery_field_name" id="disc" placeholder="e.g. Berlin" maxlength=10 required/>
+
+                                <input type="hidden" name="discovery_hidden_latitude" id="discovery_hidden_latitude">
+                                <input type="hidden" name="discovery_hidden_longitude" id="discovery_hidden_longitude">
+
+
+                                <input type="submit" value="Search" />
+                            </div>
+                        </div>
+                    </fieldset>
+
+                </form>
+                <!-- ############### VS1Lab 1a Form 2 End -->
+
+                <div class="discovery__wrapper">
+                    <div class="row">
+                        <div class="col-8 discovery__map">
+                            <img src="./public/images/mapview.jpg" alt="a map with locations" id="mapView" />
+
+                            <div class="zoom-Slider">
+                                <label for="zoomSlider_input">Zoom</label>
+                                <input id="zoomSlider_input" type="range" max="18" min="2" value="8" onchange="updateLocation()">
+                            </div>
+
+                        </div>
+                        <div class="col-4 discovery__taglist">
+                            <ul class="discovery__results" id="discoveryResults">
+
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </section>
+        </div>
+    </div>
+</main>
+<footer class="footer">
+    <span>(c) 2021/22 HKA_IWI_VSYS</span>
+</footer>
+</body>
+
+<!-- Load JavaScripts
+        ================================================== -->
+<!-- Placed at the end of the document so the pages load faster -->
+<script src="../public/javascripts/geotagging.js"></script>
+
+</html>
+
