--- a/Aufgabe3/gta_v3/views/index.ejs
+++ b/Aufgabe3/gta_v3/views/index.ejs
@@ -9,13 +9,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GeoTagApp</title>
-    <link type="text/css" rel="stylesheet" href="../public/stylesheets/style.css" />
+    <link type="text/css" rel="stylesheet" href="../public/stylesheets/style.css"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
 <header class="header">
-    <img src="./public/images/location.png" class="header__image" alt="an image of a map and location">
+    <!--<img src="../public/images/location.png" class="header__image" alt="an image of a map and location">!-->
     <h1 class="header__title">GeoTagApp</h1>
     <nav class="header__navigation">
         <a href="#">About</a> | <a href="#">Help</a> | <a href="/">Home</a>
@@ -87,7 +87,7 @@
                 <div class="discovery__wrapper">
                     <div class="row">
                         <div class="col-8 discovery__map">
-                            <img src="./public/images/mapview.jpg" alt="a map with locations" id="mapView" />
+                            <!--<img src="./public/images/mapview.jpg" alt="a map with locations" id="mapView" />!-->
 
                             <div class="zoom-Slider">
                                 <label for="zoomSlider_input">Zoom</label>
@@ -114,7 +114,7 @@
 <!-- Load JavaScripts
         ================================================== -->
 <!-- Placed at the end of the document so the pages load faster -->
-<script src="../public/javascripts/geotagging.js"></script>
+<!--<script src="../public/javascripts/geotagging.js"></script>!-->
 
 </html>
 
