--- a/Aufgabe3/gta_v3/views/index.ejs
+++ b/Aufgabe3/gta_v3/views/index.ejs
@@ -88,9 +88,7 @@
                     <div class="row">
                         <div class="col-8 discovery__map">
                             <div class="col-12">
-                                <img src="./public/images/mapview.jpg" alt="a map with locations" id="mapView" data-tags="<%- tagsjson %>"/>
-                                <textarea content="<%-
-                                tagsjson %>"></textarea>
+                                <img src="./public/images/mapview.jpg" alt="a map with locations" id="mapView" data-tags="<%= tagsjson %>"/>
                                 <div class="zoom-Slider">
                                     <label for="zoomSlider_input">Zoom</label>
                                     <input id="zoomSlider_input" type="range" max="18" min="2" value="8" >
