corrected errors and other stuff

--- a/Aufgabe3/gta_v3/views/index.ejs
+++ b/Aufgabe3/gta_v3/views/index.ejs
@@ -35,10 +35,10 @@
                         <legend>Add a new GeoTag</legend>
 
                         <label for="lat">Latitude</label>
-                        <input type="text" name="latitude_field_name" id="lat" readonly/>
+                        <input type="text" name="latitude_field_name" id="lat" readonly value="<%= lat %>"/>
 
                         <label for="long">Longitude:</label>
-                        <input type="text" name="longitude_field_name" id="long" readonly/>
+                        <input type="text" name="longitude_field_name" id="long" readonly value="<%= long %>"/>
 
                         <label for="name">Name:</label>
                         <input type="text" name="name_field_name" id="name" placeholder="e.g. Central Berlin" maxlength=10 required/>
