Copied Files and installed dependencies(4.1.1, 4.1.2)

--- a/Aufgabe4/gta_v4_template/views/index.ejs
+++ b/Aufgabe4/gta_v4_template/views/index.ejs
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 
 <!-- File origin: VS1LAB A1a -->
-
 <html lang="en">
 
 <head>
@@ -9,7 +8,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GeoTagApp</title>
-    <link type="text/css" rel="stylesheet" href="../../../Aufgabe4/gta_v4_template/public/stylesheets/style.css"/>
+    <link type="text/css" rel="stylesheet" href="../public/stylesheets/style.css"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
