--- a/Aufgabe4/gta_v4_template/views/index.ejs
+++ b/Aufgabe4/gta_v4_template/views/index.ejs
@@ -69,7 +69,7 @@
                         <div class="row">
                             <div class="col-4">
                                 <label for="disc">Search term or keywords:</label>
-                                <input type="text" name="discovery_field_name" id="disc" placeholder="e.g. Berlin" maxlength=10 required/>
+                                <input type="text" name="discovery_field_name" id="disc_name" placeholder="e.g. Berlin" maxlength=10 required/>
 
                                 <input type="hidden" name="discovery_hidden_latitude" id="discovery_hidden_latitude">
                                 <input type="hidden" name="discovery_hidden_longitude" id="discovery_hidden_longitude">
