--- a/Aufgabe3/gta_v3/views/index.ejs
+++ b/Aufgabe3/gta_v3/views/index.ejs
@@ -5,7 +5,7 @@
 <html lang="en">
 
 <head>
-    <link rel="icon" href="./public/images/favicon.ico">
+    <link rel="icon" href="../../../Aufgabe4/gta_v4_template/public/images/favicon.ico">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GeoTagApp</title>
